changed to default added tests